test/conformance/kuttl/validate/clusterpolicy/standard/enforce/csr/02-csr-create.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
apply:
- csr.yaml
assert:
- policy-ready.yaml
