test/conformance/kuttl/validate/clusterpolicy/standard/enforce/csr/policy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: test-csr
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
